--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
-                        <span style="font-weight: 800; color: white;">TRÁMITES ESTADO DE MÉXICO EN LÍNEA</span>
+                        <span style="font-weight: 800; color: white;">Realizamos tus Trámites Vehiculares del Estado de
+                            México Ahora en Línea</span>
                         <br>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000;">
@@ -228,6 +229,39 @@
                             <h3 class="counter" data-target="24" data-prefix="" data-suffix="h">0h</h3>
                             <p data-i18n="text_stat_3">Respuesta Rápida</p>
                         </div>
+                    </div>
+
+                    <!-- New Trust Block (Per User Request) -->
+                    <div class="hero-trust-block">
+                        <h2 class="trust-title">Realizamos tus trámites vehiculares</h2>
+                        <p class="trust-desc">
+                            Gestor de Autos ofrece trámites vehiculares en múltiples estados de
+                            México: altas y bajas de placas, cambio de propietario,
+                            verificaciones, seguro y más.
+                        </p>
+                        <a href="https://maps.app.goo.gl/HEGvNwtQ4kYn3rpS7" target="_blank"
+                            class="google-pill-badge glass-button">
+                            <!-- Inline Google SVG for guaranteed visibility -->
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="24px" height="24px"
+                                class="pill-g">
+                                <path fill="#EA4335"
+                                    d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z" />
+                                <path fill="#4285F4"
+                                    d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z" />
+                                <path fill="#FBBC05"
+                                    d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z" />
+                                <path fill="#34A853"
+                                    d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z" />
+                            </svg>
+                            <div class="pill-content">
+                                <span class="pill-rating">
+                                    <i class="fas fa-star" style="color: #fbc02d; font-size: 0.9rem;"></i>
+                                    5.0
+                                </span>
+                                <span class="pill-divider">|</span>
+                                <span class="pill-count">50 reseñas</span>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
@@ -602,8 +636,6 @@
                         Reseñas reales de Google Maps</p>
                 </div>
 
-
-
                 <div class="reviews-slider-container">
                     <!-- Navigation Arrows -->
                     <button class="review-nav-btn prev" onclick="scrollReviews('prev')">
@@ -619,7 +651,8 @@
 
                         <!-- Review Card 1 -->
                         <div class="review-card">
-                            <p class="review-text">"Excelente servicio! Tramitaron mi alta de placas muy rápido y sin
+                            <p class="review-text">"Excelente servicio! Tramitaron mi alta de placas muy rápido
+                                y sin
                                 complicaciones. Totalmente recomendable."</p>
                             <div class="review-stars">
                                 <i class="fas fa-star"></i>
@@ -643,7 +676,8 @@
 
                         <!-- Review Card 2 -->
                         <div class="review-card">
-                            <p class="review-text">"Muy profesionales. Me ayudaron con el cambio de propietario de mi
+                            <p class="review-text">"Muy profesionales. Me ayudaron con el cambio de propietario
+                                de mi
                                 auto
                                 sin ningún problema."</p>
                             <div class="review-stars">
@@ -668,7 +702,8 @@
 
                         <!-- Review Card 3 -->
                         <div class="review-card">
-                            <p class="review-text">"Atención de primera. Resolvieron todas mis dudas y todo el proceso
+                            <p class="review-text">"Atención de primera. Resolvieron todas mis dudas y todo el
+                                proceso
                                 fue
                                 muy transparente."</p>
                             <div class="review-stars">
@@ -693,7 +728,8 @@
 
                         <!-- Review Card 4 -->
                         <div class="review-card">
-                            <p class="review-text">"Rapidísimo y confiable. Sin salir de casa me tramitaron todo. ¡Súper
+                            <p class="review-text">"Rapidísimo y confiable. Sin salir de casa me tramitaron
+                                todo. ¡Súper
                                 recomendado!"</p>
                             <div class="review-stars">
                                 <i class="fas fa-star"></i>
@@ -717,7 +753,8 @@
 
                         <!-- Review Card 5 -->
                         <div class="review-card">
-                            <p class="review-text">"Me ahorraron las filas interminables. El servicio de legalización
+                            <p class="review-text">"Me ahorraron las filas interminables. El servicio de
+                                legalización
                                 fue
                                 impecable y muy rápido."</p>
                             <div class="review-stars">
@@ -767,7 +804,8 @@
 
                         <!-- Review Card 7 -->
                         <div class="review-card">
-                            <p class="review-text">"100% confiable. Ya es el segundo trámite que hago con ellos y
+                            <p class="review-text">"100% confiable. Ya es el segundo trámite que hago con ellos
+                                y
                                 siempre
                                 cumplen."</p>
                             <div class="review-stars">
@@ -792,7 +830,8 @@
 
                         <!-- Review Card 8 -->
                         <div class="review-card">
-                            <p class="review-text">"La mejor opción para trámites vehiculares en la ciudad. Servicio
+                            <p class="review-text">"La mejor opción para trámites vehiculares en la ciudad.
+                                Servicio
                                 premium
                                 de verdad."</p>
                             <div class="review-stars">
@@ -817,7 +856,8 @@
 
                         <!-- Review Card 9 -->
                         <div class="review-card">
-                            <p class="review-text">"Increíble eficiencia. Recogieron y entregaron mis documentos en la
+                            <p class="review-text">"Increíble eficiencia. Recogieron y entregaron mis documentos
+                                en la
                                 puerta de mi casa."</p>
                             <div class="review-stars">
                                 <i class="fas fa-star"></i>
@@ -882,9 +922,6 @@
                     </a>
                     <p class="verify-text">✓ Verifica por ti mismo - 100% reseñas auténticas</p>
                 </div>
-            </div>
-            </div>
-        </section>
         </section>
 
         <!-- New Trámites Garantizados Section -->
