--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
-    <link rel="alternate icon" href="assets/images/logo.jpg">
+    <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/images/logo.jpg">
+    <link rel="apple-touch-icon" href="assets/images/logo.jpg">
+    <link rel="shortcut icon" href="assets/images/logo.jpg">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/">
-    <meta property="og:title" content="Trámites Vehiculares Estado de México en Línea | Sin Filas">
+    <meta property="og:title" content="Gestor de Autos | Trámites Vehiculares CDMX y EdoMex en Línea">
     <meta property="og:description"
-        content="¿Necesitas placas o licencias? Realiza todos tus trámites del Estado de México en línea con nosotros. Rápido, seguro y sin salir de casa.">
+        content="Evita filas y multas. Realizamos tu alta de placas, licencias, cambios de propietario y regularización en EdoMex, CDMX y Morelos. Servicio 100% garantizado.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gestordeautos.com.mx/">
-    <meta property="twitter:title" content="Trámites Vehiculares Estado de México en Línea | Sin Filas">
+    <meta property="twitter:title" content="Gestor de Autos | Trámites Vehiculares CDMX y EdoMex en Línea">
     <meta property="twitter:description"
-        content="¿Necesitas placas o licencias? Realiza todos tus trámites del Estado de México en línea con nosotros. Rápido, seguro y sin salir de casa.">
+        content="Evita filas y multas. Realizamos tu alta de placas, licencias, cambios de propietario y regularización en EdoMex, CDMX y Morelos. Servicio 100% garantizado.">
     <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- JSON-LD Structured Data -->
@@ -62,6 +64,24 @@
             "postalCode": "06500",
             "addressCountry": "MX"
           },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 19.4326,
+            "longitude": -99.1332
+          },
+          "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday",
+              "Saturday"
+            ],
+            "opens": "09:00",
+            "closes": "18:00"
+          },
           "contactPoint": {
               "@type": "ContactPoint",
               "telephone": "+525535757364",
@@ -89,7 +109,7 @@
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "5.0",
-            "reviewCount": "153"
+            "reviewCount": "207"
           },
           "makesOffer": [
             {
@@ -140,7 +160,8 @@
     </noscript>
 
     <!-- Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        media="print" onload="this.media='all'">
 
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css">
