--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
 
         <!-- Services Section -->
-        <section id="servicios" class="section-padding services reveal">
+        <section id="servicios" class="section-padding services">
             <div class="container">
                 <div class="section-title">
                     <h2 data-i18n="services_title">Nuestros Servicios</h2>
@@ -597,7 +597,7 @@
         </div>
 
         <!-- Pillars / Why Us -->
-        <section class="section-padding features reveal">
+        <section class="section-padding features">
             <div class="container">
                 <div class="features-layout">
                     <div class="features-grid">
@@ -630,7 +630,7 @@
         </section>
 
         <!-- Google Reviews Section -->
-        <section class="section-padding reviews-section reveal">
+        <section class="section-padding reviews-section">
             <div class="container">
                 <div class="section-title">
                     <h2>La Confianza de Nuestros Clientes</h2>
