--- a/index.html
+++ b/index.html
@@ -4,24 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Autos | Trámites Vehiculares EdoMex, CDMX y Morelos</title>
+    <title>Gestor de Autos | Trámites Vehiculares Estado de México y CDMX</title>
     <meta name="description"
-        content="Expertos en trámites vehiculares en línea. Placas, licencias y cambio de propietario en Estado de México, CDMX y Morelos. Servicio rápido en Chalco, Interlomas y Huixquilucan. Evita filas, respuesta en 24h.">
+        content="Expertos en trámites vehiculares en línea. Placas, licencias y cambio de propietario en Estado de México, CDMX y Morelos. Evita filas, respuesta rápida y garantizada.">
     <meta name="keywords"
-        content="gestoria vehicular, tramites vehiculares online, placas edomex linea, licencia conducir edomex, cambio propietario auto mexico, gestor vehicular interlomas, placas morelos cdmx, repuve consulta, alta placas moto edomex">
+        content="gestoría vehicular, trámites Estado de México, trámites vehicular CDMX, placas Estado de México, licencia conducir Edomex, cambio de propietario estado de mexico">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/browser-favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/browser-favicon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/google-favicon.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/images/google-favicon.png">
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
+    <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/images/logo.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo.jpg">
-    <link rel="mask-icon" href="assets/images/google-favicon.png" color="#2563eb">
-    <meta name="msapplication-TileColor" content="#0f172a">
-    <meta name="theme-color" content="#0f172a">
-    <link rel="shortcut icon" href="assets/images/browser-favicon.png">
+    <link rel="shortcut icon" href="assets/images/logo.jpg">
+    <meta name="theme-color" content="#2563eb">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
