--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Autos | Trámites Vehiculares Estado de México y CDMX</title>
+    <title>Gestor de Autos | Trámites en Interlomas, Huixquilucan, Chalco y EdoMex</title>
     <meta name="description"
-        content="Expertos en trámites vehiculares en línea. Placas, licencias y cambio de propietario en Estado de México, CDMX y Morelos. Evita filas, respuesta rápida y garantizada.">
+        content="Servicio #1 en trámites vehiculares. Placas, licencias y cambios de propietario en Interlomas, Huixquilucan, Chalco, Ixtapaluca y todo el Estado de México. Gestoría rápida, segura y 100% online.">
     <meta name="keywords"
-        content="gestoría vehicular, trámites Estado de México, trámites vehicular CDMX, placas Estado de México, licencia conducir Edomex, cambio de propietario estado de mexico">
+        content="gestoría vehicular interlomas, trámites vehiculares huixquilucan, placas chalco, cambio de propietario ixtapaluca, gestoría vehicular estado de mexico, licencias edomex online">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow">
 
     <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="48x48" href="assets/images/logo.jpg">
     <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
     <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/images/logo.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo.jpg">
@@ -61,7 +62,7 @@
           "logo": "https://gestordeautos.com.mx/assets/images/logo.jpg",
           "telephone": "+525535757364",
           "url": "https://gestordeautos.com.mx",
-          "description": "Líderes en gestión vehicular online en el Estado de México y CDMX. Especialistas en alta de placas, licencias de conducir, cambios de propietario y regularización REPUVE.",
+          "description": "Líderes en gestión vehicular online en el Estado de México, Interlomas, Huixquilucan, Chalco e Ixtapaluca. Especialistas en alta de placas, licencias de conducir y cambios de propietario.",
           "address": {
             "@type": "PostalAddress",
             "streetAddress": "Servicio Digital y Domicilio",
@@ -174,9 +175,8 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
-                        <span style="font-weight: 800; color: white; display: block;">Realizamos tus Trámites
-                            Vehiculares del Estado de
-                            México Ahora en Línea</span>
+                        <span style="font-weight: 800; color: white; display: block;">Trámites Vehiculares en
+                            Interlomas, Huixquilucan, Chalco y EdoMex Online</span>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1.5rem;">
                             Mejor llama a Gestor de Autos
