--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Autos | Trámites en Interlomas, Huixquilucan, Chalco y EdoMex</title>
+    <title>Gestor de Autos | #1 Trámites en Interlomas, Huixquilucan, Chalco e Ixtapaluca</title>
     <meta name="description"
-        content="Servicio #1 en trámites vehiculares. Placas, licencias y cambios de propietario en Interlomas, Huixquilucan, Chalco, Ixtapaluca y todo el Estado de México. Gestoría rápida, segura y 100% online.">
+        content="Tu gestoría vehicular líder en el Estado de México. Expertos en placas, licencias y trámites en Interlomas, Huixquilucan, Chalco e Ixtapaluca. Gestión 100% online y segura. ¡Cotiza ya!">
     <meta name="keywords"
-        content="gestoría vehicular interlomas, trámites vehiculares huixquilucan, placas chalco, cambio de propietario ixtapaluca, gestoría vehicular estado de mexico, licencias edomex online">
+        content="trámites vehiculares interlomas, gestoría vehicular huixquilucan, placas chalco, trámites vehiculares ixtapaluca, licencias estado de mexico, cambio de propietario edomex">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="48x48" href="assets/images/logo.jpg">
@@ -175,8 +175,8 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
-                        <span style="font-weight: 800; color: white; display: block;">Trámites Vehiculares en
-                            Interlomas, Huixquilucan, Chalco y EdoMex Online</span>
+                        <span style="font-weight: 800; color: white; display: block;">Tramites Vehiculares en Estado de
+                            Mexico, Interlomas, Huixquilucan, Chalco e Ixtapaluca</span>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1.5rem;">
                             Mejor llama a Gestor de Autos
