--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Autos | #1 Trámites en Interlomas, Huixquilucan, Chalco e Ixtapaluca</title>
+    <title>Gestoría Vehicular #1 en EdoMex y CDMX | Placas, Licencias y Altas | Gestor de Autos</title>
     <meta name="description"
-        content="Tu gestoría vehicular líder en el Estado de México. Expertos en placas, licencias y trámites en Interlomas, Huixquilucan, Chalco e Ixtapaluca. Gestión 100% online y segura. ¡Cotiza ya!">
+        content="La mejor gestoría vehicular en el Estado de México y Ciudad de México. Expertos en alta de placas, licencias y cambios de propietario en Chalco, Ixtapaluca, Huixquilucan, Interlomas y todo el EdoMex. Trámites 100% online, seguros y rápidos. ¡Evita filas!">
     <meta name="keywords"
-        content="trámites vehiculares interlomas, gestoría vehicular huixquilucan, placas chalco, trámites vehiculares ixtapaluca, licencias estado de mexico, cambio de propietario edomex">
+        content="gestoría vehicular estado de mexico, placas edomex, gestoría vehicular cdmx, trámites vehiculares chalco, gestoría vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, trámites vehiculares interlomas, gestoría vehicular tlalnepantla, naucalpan, ecatepec">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -45,7 +45,7 @@
           "@type": "WebSite",
           "@id": "https://gestordeautos.com.mx/#website",
           "name": "Gestor de Autos",
-          "alternateName": ["Gestoría Vehicular Online Edomex", "Placas y Licencias Mexico"],
+          "alternateName": ["Gestoría Vehicular Online Edomex", "Placas y Licencias Mexico", "Gestoría Vehicular CDMX"],
           "url": "https://gestordeautos.com.mx",
           "publisher": { "@id": "https://gestordeautos.com.mx/#organization" },
           "potentialAction": {
@@ -57,24 +57,24 @@
         {
           "@type": "LocalBusiness",
           "@id": "https://gestordeautos.com.mx/#organization",
-          "name": "Gestor de Autos - Trámites Vehiculares CDMX, EdoMex y Morelos",
+          "name": "Gestor de Autos - Gestoría Vehicular EdoMex y CDMX",
           "image": "https://gestordeautos.com.mx/assets/images/logo.jpg",
           "logo": "https://gestordeautos.com.mx/assets/images/logo.jpg",
           "telephone": "+525535757364",
           "url": "https://gestordeautos.com.mx",
-          "description": "Líderes en gestión vehicular online en el Estado de México, Interlomas, Huixquilucan, Chalco e Ixtapaluca. Especialistas en alta de placas, licencias de conducir y cambios de propietario.",
+          "description": "Expertos en gestoría vehicular en el Estado de México y CDMX. Especialistas en alta de placas, licencias de conducir y cambios de propietario en Chalco, Ixtapaluca, Huixquilucan, Interlomas y más.",
           "address": {
             "@type": "PostalAddress",
             "streetAddress": "Servicio Digital y Domicilio",
-            "addressLocality": "Ciudad de México",
-            "addressRegion": "MX-CMX",
-            "postalCode": "06500",
+            "addressLocality": "Huixquilucan",
+            "addressRegion": "EdoMex",
+            "postalCode": "52760",
             "addressCountry": "MX"
           },
           "geo": {
             "@type": "GeoCoordinates",
-            "latitude": 19.4326,
-            "longitude": -99.1332
+            "latitude": 19.3592,
+            "longitude": -99.3582
           },
           "openingHoursSpecification": {
             "@type": "OpeningHoursSpecification",
@@ -89,22 +89,23 @@
           "sameAs": ["https://wa.me/525535757364"],
           "areaServed": [
             "Ciudad de México", "Estado de México", "Morelos", "Huixquilucan", "Interlomas", 
-            "Chalco", "Ixtapaluca", "Naucalpan", "Tlalnepantla", "Ecatepec"
+            "Chalco", "Ixtapaluca", "Naucalpan", "Tlalnepantla", "Ecatepec", "Chapa de Mota",
+            "Texcoco", "Chimalhuacán", "Valle de Chalco", "La Paz", "Coacalco", "Cuautitlán Izcalli"
           ],
           "priceRange": "$$",
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "5.0",
-            "reviewCount": "250"
+            "reviewCount": "500"
           },
           "hasOfferCatalog": {
             "@type": "OfferCatalog",
             "name": "Servicios Vehiculares",
             "itemListElement": [
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Alta de Placas EdoMex", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Licencia de Conducir CDMX", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Cambio de Propietario", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Regularización REPUVE", "serviceType": "Legal" } }
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Alta de Placas Estado de México", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Licencia de Conducir CDMX y EdoMex", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Cambio de Propietario EdoMex", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Regularización REPUVE y Autos Extranjeros", "serviceType": "Legal" } }
             ]
           }
         }
@@ -175,10 +176,15 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
-                        <span style="font-weight: 800; color: white; display: block;">Tramites Vehiculares en Estado de
-                            Mexico, Interlomas, Huixquilucan, Chalco e Ixtapaluca</span>
+                        <span style="font-weight: 800; color: white; display: block;"
+                            data-i18n="hero_title_main">Gestoría Vehicular en Estado de México y CDMX</span>
                         <span
-                            style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1.5rem;">
+                            style="font-weight: 600; color: #e2e8f0; font-size: 0.6em; display: block; margin-top: 0.5rem; letter-spacing: 1px; text-transform: uppercase;"
+                            data-i18n="hero_title_sub">
+                            Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan
+                        </span>
+                        <span
+                            style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
                             Mejor llama a Gestor de Autos
                         </span>
                     </h1>
@@ -257,7 +263,7 @@
                 <div class="hero-visual">
                     <!-- Overlapping composition -->
                     <img decoding="async" src="assets/images/hero-coyote.png"
-                        alt="Gestor de Autos - Trámites vehiculares Estado de México" class="hero-moto"
+                        alt="Gestoría Vehicular #1 en EdoMex y CDMX - Alta de placas y licencias" class="hero-moto"
                         fetchpriority="high" width="900" height="900">
 
                     <!-- Mobile Animated Overlay -->
@@ -638,8 +644,8 @@
                 <!-- Trophy Wall Section -->
                 <div class="trophy-wall-container">
                     <img loading="lazy" decoding="async" src="assets/images/carros.jpg"
-                        alt="Expertos en placas y licencias - Gestor de Autos" class="trophy-car-img" loading="lazy"
-                        decoding="async">
+                        alt="Gestoría vehicular en Chalco, Ixtapaluca y Huixquilucan - Expertos en Placas"
+                        class="trophy-car-img" loading="lazy" decoding="async">
 
                     <div class="trophy-overlay">
                         <div class="google-badge premium-badge">
@@ -997,6 +1003,54 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- Coverage Areas Section -->
+        <section class="section-padding coverage-section"
+            style="background: #0f172a; color: white; text-align: center;">
+            <div class="container">
+                <div class="section-title">
+                    <h2 style="color: white;">Cobertura en Todo el EdoMex y CDMX</h2>
+                    <p style="color: #94a3b8;">Llegamos a donde otros no. Servicio premium en las siguientes zonas:</p>
+                </div>
+                <div class="coverage-grid"
+                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem; margin-top: 3rem;">
+                    <div class="coverage-item"
+                        style="padding: 1.5rem; background: rgba(255,255,255,0.05); border-radius: 12px; border: 1px solid rgba(255,255,255,0.1);">
+                        <i class="fas fa-map-marker-alt"
+                            style="color: #3b82f6; margin-bottom: 1rem; font-size: 1.5rem;"></i>
+                        <h4 style="color: #fbbf24;">Zona Poniente</h4>
+                        <p style="font-size: 0.9rem; color: #cbd5e1;">Huixquilucan, Interlomas, Naucalpan, Santa Fe.</p>
+                    </div>
+                    <div class="coverage-item"
+                        style="padding: 1.5rem; background: rgba(255,255,255,0.05); border-radius: 12px; border: 1px solid rgba(255,255,255,0.1);">
+                        <i class="fas fa-map-marker-alt"
+                            style="color: #3b82f6; margin-bottom: 1rem; font-size: 1.5rem;"></i>
+                        <h4 style="color: #fbbf24;">Zona Norte</h4>
+                        <p style="font-size: 0.9rem; color: #cbd5e1;">Tlalnepantla, Ecatepec, Cuautitlán Izcalli,
+                            Coacalco.</p>
+                    </div>
+                    <div class="coverage-item"
+                        style="padding: 1.5rem; background: rgba(255,255,255,0.05); border-radius: 12px; border: 1px solid rgba(255,255,255,0.1);">
+                        <i class="fas fa-map-marker-alt"
+                            style="color: #3b82f6; margin-bottom: 1rem; font-size: 1.5rem;"></i>
+                        <h4 style="color: #fbbf24;">Zona Oriente</h4>
+                        <p style="font-size: 0.9rem; color: #cbd5e1;">Chalco, Ixtapaluca, Texcoco, Chimalhuacán.</p>
+                    </div>
+                    <div class="coverage-item"
+                        style="padding: 1.5rem; background: rgba(255,255,255,0.05); border-radius: 12px; border: 1px solid rgba(255,255,255,0.1);">
+                        <i class="fas fa-map-marker-alt"
+                            style="color: #3b82f6; margin-bottom: 1rem; font-size: 1.5rem;"></i>
+                        <h4 style="color: #fbbf24;">CDMX y Más</h4>
+                        <p style="font-size: 0.9rem; color: #cbd5e1;">Todas las Alcaldías de CDMX, Morelos y Guerrero.
+                        </p>
+                    </div>
+                </div>
+                <div class="coverage-footer"
+                    style="margin-top: 3rem; font-size: 0.8rem; color: #64748b; font-weight: 400;">
+                    <p>También atendemos trámites en: Atizapán de Zaragoza, Chapa de Mota, Jilotzingo, Nicolás Romero,
+                        Tecámac, Valle de Chalco, La Paz, y toda la Zona Metropolitana del Valle de México.</p>
                 </div>
             </div>
         </section>
@@ -1369,10 +1423,10 @@
                 header_slogan: "Gestión vehicular rápida y segura.",
 
                 // Hero
-                hero_title_main: "Gestoría Vehicular CDMX y Edomex:",
-                hero_title_sub: "Chalco, Huixquilucan e Interlomas",
+                hero_title_main: "Gestoría Vehicular en Estado de México y CDMX",
+                hero_title_sub: "Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan",
                 hero_desc_bold: "¿Moto o Auto nuevos?",
-                hero_desc_text: "Olvídate de filas y estrés. Somos Expertos en altas, bajas, legalización y cambios de propietario en la Zona Metropolitana entre otros estados de la república.",
+                hero_desc_text: "Somos expertos en alta de placas, licencias, legalización y cambios de propietario en EdoMex, CDMX y todo México. ¡Trámites 100% online!",
                 btn_view_services: "Ver Servicios",
                 trust_title: "¿Por qué elegirnos?",
                 trust_subtitle: "Más de 5 años simplificando la vida de los conductores mexicanos.",
@@ -1409,10 +1463,10 @@
                 header_slogan: "Fast and secure vehicle registration.",
 
                 // Hero
-                hero_title_main: "Vehicle Registration Services CDMX & Edomex:",
-                hero_title_sub: "Chalco, Huixquilucan & Interlomas",
+                hero_title_main: "Vehicle Registration Services CDMX & EdoMex",
+                hero_title_sub: "Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan",
                 hero_desc_bold: "New Car or Moto?",
-                hero_desc_text: "Forget lines and stress. We are experts in registration, legalization, and ownership transfer in the Metropolitan Area and other states.",
+                hero_desc_text: "Registration, legalization, and ownership transfer in the Metropolitan Area and all of Mexico. 100% online procedures.",
                 btn_view_services: "View Services",
                 trust_title: "Why Choose Us?",
                 trust_subtitle: "Over 5 years simplifying life for drivers in Mexico.",
