--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="La mejor gestoría vehicular en el Estado de México y Ciudad de México. Expertos en alta de placas, licencias y cambios de propietario en Chalco, Ixtapaluca, Huixquilucan, Interlomas y todo el EdoMex. Trámites 100% online, seguros y rápidos. ¡Evita filas!">
     <meta name="keywords"
-        content="gestoría vehicular estado de mexico, placas edomex, gestoría vehicular cdmx, trámites vehiculares chalco, gestoría vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, trámites vehiculares interlomas, gestoría vehicular tlalnepantla, naucalpan, ecatepec">
+        content="gestoría vehicular estado de mexico, placas edomex, gestoría vehicular cdmx, trámites vehiculares chalco, gestoría vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, trámites vehiculares interlomas, gestoría vehicular tlalnepantla, ecatepec">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -89,7 +89,7 @@
           "sameAs": ["https://wa.me/525535757364"],
           "areaServed": [
             "Ciudad de México", "Estado de México", "Morelos", "Huixquilucan", "Interlomas", 
-            "Chalco", "Ixtapaluca", "Naucalpan", "Tlalnepantla", "Ecatepec", "Chapa de Mota",
+            "Chalco", "Ixtapaluca", "Tlalnepantla", "Ecatepec", "Chapa de Mota",
             "Texcoco", "Chimalhuacán", "Valle de Chalco", "La Paz", "Coacalco", "Cuautitlán Izcalli"
           ],
           "priceRange": "$$",
@@ -181,7 +181,7 @@
                         <span
                             style="font-weight: 600; color: #e2e8f0; font-size: 0.6em; display: block; margin-top: 0.5rem; letter-spacing: 1px; text-transform: uppercase;"
                             data-i18n="hero_title_sub">
-                            Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan
+                            Chalco · Ixtapaluca · Huixquilucan · Interlomas
                         </span>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
@@ -1021,7 +1021,7 @@
                         <i class="fas fa-map-marker-alt"
                             style="color: #3b82f6; margin-bottom: 1rem; font-size: 1.5rem;"></i>
                         <h4 style="color: #fbbf24;">Zona Poniente</h4>
-                        <p style="font-size: 0.9rem; color: #cbd5e1;">Huixquilucan, Interlomas, Naucalpan, Santa Fe.</p>
+                        <p style="font-size: 0.9rem; color: #cbd5e1;">Huixquilucan, Interlomas, Santa Fe.</p>
                     </div>
                     <div class="coverage-item"
                         style="padding: 1.5rem; background: rgba(255,255,255,0.05); border-radius: 12px; border: 1px solid rgba(255,255,255,0.1);">
@@ -1424,7 +1424,7 @@
 
                 // Hero
                 hero_title_main: "Gestoría Vehicular en Estado de México y CDMX",
-                hero_title_sub: "Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan",
+                hero_title_sub: "Chalco · Ixtapaluca · Huixquilucan · Interlomas",
                 hero_desc_bold: "¿Moto o Auto nuevos?",
                 hero_desc_text: "Somos expertos en alta de placas, licencias, legalización y cambios de propietario en EdoMex, CDMX y todo México. ¡Trámites 100% online!",
                 btn_view_services: "Ver Servicios",
@@ -1464,7 +1464,7 @@
 
                 // Hero
                 hero_title_main: "Vehicle Registration Services CDMX & EdoMex",
-                hero_title_sub: "Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan",
+                hero_title_sub: "Chalco · Ixtapaluca · Huixquilucan · Interlomas",
                 hero_desc_bold: "New Car or Moto?",
                 hero_desc_text: "Registration, legalization, and ownership transfer in the Metropolitan Area and all of Mexico. 100% online procedures.",
                 btn_view_services: "View Services",
