--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BNJCSQXF11"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-BNJCSQXF11');
+    </script>
     <title>Gestoría Vehicular #1 en EdoMex y CDMX | Placas, Licencias y Altas | Gestor de Autos</title>
     <meta name="description"
         content="La mejor gestoría vehicular en el Estado de México y Ciudad de México. Expertos en alta de placas, licencias y cambios de propietario en Chalco, Ixtapaluca, Huixquilucan, Interlomas y todo el EdoMex. Trámites 100% online, seguros y rápidos. ¡Evita filas!">
